--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/users/test/jest-e2e.json"
+    "test:e2e": "jest --config jest-e2e.json",
+    "test:e2e:users": "jest --config ./apps/users/test/jest-e2e.json",
+    "test:e2e:consents": "jest --config ./apps/consents/test/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
