--- a/package.json
+++ b/package.json
@@ -19,14 +19,28 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config jest-e2e.json",
     "test:e2e:users": "jest --config ./apps/users/test/jest-e2e.json",
-    "test:e2e:consents": "jest --config ./apps/consents/test/jest-e2e.json"
+    "test:e2e:consents": "jest --config ./apps/consents/test/jest-e2e.json",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "migration:generate": "name=$npm_config_name && timestamp=$(date +%Y%m%d%H%M%S) && npm run typeorm -- migration:generate ./apps/users/src/infrastructure/database/migrations/${name}${timestamp} -d apps/users/src/infrastructure/database/datasource.ts",
+    "migration:run": "npm run typeorm -- migration:run -d apps/users/src/infrastructure/database/datasource.ts",
+    "migration:revert": "npm run typeorm -- migration:revert -d apps/users/src/infrastructure/database/datasource.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/microservices": "^11.0.10",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.0.4",
+    "@nestjs/typeorm": "^11.0.0",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.5",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "pg": "^8.13.3",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
