chore: update docker compose to run migrations on startup of application

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,26 +31,34 @@ services:
       context: .
       dockerfile: ./apps/users/Dockerfile
       target: development
-    command: npm run start:dev users
+    depends_on:
+      - postgres
+    command: sh -c "npm run migration:run && npm run start:dev users"
     env_file:
       - ./apps/users/.env
     ports:
       - 3001:3001
     volumes:
       - .:/usr/src/app
+    networks:
+      - didomi_network
 
   consents:
     build:
       context: .
       dockerfile: ./apps/consents/Dockerfile
       target: development
-    command: npm run start:dev consents
+    depends_on:
+      - postgres
+    command: sh -c "npm run migration:run && npm run start:dev consents"
     env_file:
       - ./apps/consents/.env
     ports:
       - 3002:3002
     volumes:
       - .:/usr/src/app
+    networks:
+      - didomi_network
 
 volumes:
   postgres_data:
