--- a/apps/users/.env.example
+++ b/apps/users/.env.example
@@ -1,5 +1,7 @@
+PORT=3001
 DB_HOST=postgres
 DB_PORT=5432
 DB_USER=root
 DB_PASSWORD=root
 DB_NAME=users_db
+RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
