--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "test:e2e:users": "jest --config ./apps/users/test/jest-e2e.json",
     "test:e2e:consents": "jest --config ./apps/consents/test/jest-e2e.json",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "migration:generate": "name=$npm_config_name && timestamp=$(date +%Y%m%d%H%M%S) && npm run typeorm -- migration:generate ./apps/users/src/infrastructure/database/migrations/${name}${timestamp} -d apps/users/src/infrastructure/database/datasource.ts",
-    "migration:run": "npm run typeorm -- migration:run -d apps/users/src/infrastructure/database/datasource.ts",
-    "migration:revert": "npm run typeorm -- migration:revert -d apps/users/src/infrastructure/database/datasource.ts",
+    "migration:users:generate": "name=$npm_config_name && timestamp=$(date +%Y%m%d%H%M%S) && npm run typeorm -- migration:generate ./apps/users/src/infrastructure/database/migrations/${name}${timestamp} -d apps/users/src/infrastructure/database/datasource.ts",
+    "migration:users:run": "npm run typeorm -- migration:run -d apps/users/src/infrastructure/database/datasource.ts",
+    "migration:users:revert": "npm run typeorm -- migration:revert -d apps/users/src/infrastructure/database/datasource.ts",
     "migration:consents:generate": "name=$npm_config_name && timestamp=$(date +%Y%m%d%H%M%S) && npm run typeorm -- migration:generate ./apps/consents/src/database/migrations/${name}${timestamp} -d apps/consents/src/database/datasource.ts",
     "migration:consents:run": "npm run typeorm -- migration:run -d apps/consents/src/database/datasource.ts",
     "migration:consents:revert": "npm run typeorm -- migration:revert -d apps/consents/src/database/datasource.ts"
