chore: update .env.example

--- a/apps/consents/.env.example
+++ b/apps/consents/.env.example
@@ -6,3 +6,4 @@ DB_PASSWORD=root
 DB_NAME=consents_db
 RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
 RABBITMQ_QUEUE=consents_queue
+RABBITMQ_CONSUME_QUEUE=users_queue
