--- a/apps/users/.env.example
+++ b/apps/users/.env.example
@@ -6,3 +6,4 @@ DB_PASSWORD=root
 DB_NAME=users_db
 RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
 RABBITMQ_QUEUE=users_queue
+RABBITMQ_CONSUME_QUEUE=consents_queue
