--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
       "<rootDir>/libs/"
     ],
     "moduleNameMapper": {
+      "^@app/common(|/.*)$": "<rootDir>/libs/common/src/$1",
       "^@app/database(|/.*)$": "<rootDir>/libs/database/src/$1",
       "^@app/lib(|/.*)$": "<rootDir>/libs/lib/src/$1",
       "^@app/messaging(|/.*)$": "<rootDir>/libs/messaging/src/$1"
